добавлены мелкие сетки и декор

--- a/source/form.html
+++ b/source/form.html
@@ -20,21 +20,17 @@
           height="18">
       </a>
     </div>
-    <nav class="main-navigation">
+    <nav class="main-navigation main-nav--closed main-nav--nojs">
       <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-    </nav>
-    <div class="main-navigation">
       <ul class="main-navigation__list reset-list">
         <li class="main-navigation__item reset-item"><a class="main-navigation__link" href="index.html">Главная</a>
         </li>
         <li class="main-navigation__item reset-item"><a class="main-navigation__link" href="catalog.html">Каталог
-            продукции</a>
-        </li>
-        <li class="main-navigation__item main-navigation__item--active reset-item"><a
-            class="main-navigation__link">Подбор
-            программы</a></li>
+            продукции</a></li>
+        <li class="main-navigation__item reset-item"><a
+            class="main-navigation__link  main-navigation__link--active">Подбор программы</a></li>
       </ul>
-    </div>
+    </nav>
   </header>
 
 
@@ -62,7 +58,7 @@
             </div>
           </div>
           <div class="form-field__item">
-            <label class="form-field__label" for="form-age">Возраст:</label>
+            <label class="form-field__label" for="form-age">Возраст (лет):</label>
             <div class="form-field__wrapper">
               <input class="form-field__field-text form-field__field-text--age" type="number" id="form-age"
                 name="form-age" placeholder="7" required />
@@ -102,20 +98,23 @@
       <fieldset class="form__form-field form-email-phone">
         <legend class="form-email-phone__title">Контактные данные
           (владельца кота)</legend>
-        <div class="form-email-phone__item">
-          <label class="form-email-phone__label" for="form-email">Email:<sup>*</sup></label>
-          <div class="form-email-phone__wrapper">
-            <input class="form-email-phone__field-text form-email-phone__field-text--email" type="email" id="form-email"
-              name="form-email" placeholder="kuklachev@gmail.com" required />
+        <div class="form-email-phone__wrapper-item">
+          <div class="form-email-phone__item">
+            <label class="form-email-phone__label" for="form-email">E-mail:<sup>*</sup></label>
+            <div class="form-email-phone__wrapper form-email-phone__wrapper--email">
+              <input class="form-email-phone__field-text form-email-phone__field-text--email" type="email"
+                id="form-email" name="form-email" placeholder="kuklachev@gmail.com" required />
+            </div>
+          </div>
+          <div class="form-email-phone__item">
+            <label class="form-email-phone__label" for="form-phone">Телефон:<sup>*</sup></label>
+            <div class="form-email-phone__wrapper form-email-phone__wrapper--phone">
+              <input class="form-email-phone__field-text form-email-phone__field-text--phone" type="tel" id="form-phone"
+                name="form-phone" placeholder="8 (960) 900-60-90" required />
+            </div>
           </div>
         </div>
-        <div class="form-email-phone__item">
-          <label class="form-email-phone__label" for="form-phone">Телефон:<sup>*</sup></label>
-          <div class="form-email-phone__wrapper">
-            <input class="form-email-phone__field-text form-email-phone__field-text--phone" type="tel" id="form-phone"
-              name="form-phone" placeholder="8 (960) 900-60-90" required />
-          </div>
-        </div>
+
       </fieldset>
       <fieldset class="form__form-field form-comment">
         <legend class="form-comment__title">Комментарий</legend>
@@ -171,20 +170,26 @@
     </form>
   </main>
 
-  <footer class="main-footer ">
-    <section class="collaboration container-content">
-      <h2 class="collaboration__title">Приглашаем
-        к сотрудничеству
-        дилеров!
-      </h2>
-      <address class="collaboration__address">
-        <p class="collaboration__address-street">ул. Большая
-          Конюшенная, д. 19/8</p>
-        <p class="collaboration__address-city">Санкт-Петербург</p>
-      </address>
-    </section>
+  <footer class="main-footer">
+    <div class="main-footer--inner-pages">
+      <section class="collaboration container-content">
+        <h2 class="collaboration__title">Приглашаем <br>
+          к сотрудничеству
+          дилеров!
+        </h2>
+        <address class="collaboration__address">
+          <p class="collaboration__address-street">ул. Большая
+            Конюшенная, д. 19/8</p>
+          <p class="collaboration__address-city">Санкт-Петербург</p>
+        </address>
+      </section>
+    </div>
     <section class="map container">
       <h2 class="visually-hidden">Где мы находимся</h2>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003035!2d30.320858716011124!3d59.93871916905429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1660319396633!5m2!1sru!2sru"
+        width="320" height="361" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
       <img class="map__image" src="img/map.jpeg" alt="ул. Большая
       Конюшенная, д. 19/8, Санкт-Петербург" width="320" height="362">
     </section>
@@ -235,7 +240,7 @@
           </ul>
         </div>
         <div class="main-footer__copyright copyright">
-          <b class="copyright__text">HTML Academy</b>
+          <p class="copyright__text">HTML Academy</p>
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
             <svg class="htmlacademy-logo" aria-hidden="true" focusable="false" role="img" aria-label="htmlacademy."
               width="27" height="34" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -250,7 +255,7 @@
 
     </div>
   </footer>
-
+  <script src="js/app.js"></script>
 </body>
 
 </html>
