--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Каталог</title>
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="icon" href="favicon.ico"> <!-- 32×32 -->
+  <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicon/apple.png">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body class="page-body">
@@ -374,7 +378,9 @@
     </div>
 
     <section class="add-goods container-content container-content--respons">
-      <h2 class="add-goods__title">Дополнительные товары</h2>
+      <h2 class="add-goods__title">
+        <span class="add-goods__title-text">Дополнительные товары</span>
+      </h2>
       <div class="add-goods__wrapper">
         <ul class="add-goods__list reset-list">
           <li class="add-goods__item reset-item">
@@ -470,7 +476,7 @@
           referrerpolicy="no-referrer-when-downgrade"></iframe>
       </section>
       <div class="main-footer__wrapper">
-        <div class="main-footer__wrapper-content container-content">
+        <div class="main-footer__wrapper-content container-content--respons">
           <div class="main-footer__logo ">
             <a class="main-footer__link" href="#">
               <img class="main-footer__icon" src="img/header/logo-text.svg" alt="Надпись Cat energy" width="128"
