--- a/source/form.html
+++ b/source/form.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Сделать заказ спортпита для котиков">
   <title>Форма заказа</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="icon" href="favicon.ico">
@@ -30,7 +31,8 @@
         </a>
       </div>
       <nav class="main-navigation main-navigation--closed main-navigation--nojs">
-        <button class="main-navigation__toggle" type="button"><span class="main-navigation__toggle-btn"></span></button>
+        <button class="main-navigation__toggle" type="button" name="menu-button"><span
+            class="main-navigation__toggle-btn"></span></button>
         <ul class="main-navigation__list reset-list">
           <li class="main-navigation__item reset-item">
             <a class="main-navigation__link main-navigation__link--inner" href="index.html">Главная</a>
@@ -209,7 +211,7 @@
     </div>
     <section class="map">
       <h2 class="visually-hidden">Где мы находимся</h2>
-      <iframe
+      <iframe name="Карта местоположения офиса"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003035!2d30.320858716011124!3d59.93871916905429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1660319396633!5m2!1sru!2sru"
         width="320" height="361" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
