--- a/source/form.html
+++ b/source/form.html
@@ -11,11 +11,13 @@
   <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicon/apple.png">
   <link rel="manifest" href="manifest.webmanifest">
+  <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
+  <link rel="preload" href="fonts/oswaldmedium.woff2" as="font">
 </head>
 
 <body class="page-body">
   <header class="main-header ">
-    <div class="main-header__wrapper container-content--header">
+    <div class="main-header__wrapper container-content container-content--header">
       <div class="main-logo">
         <a class="main-logo__icon" href="index.html">
           <picture>
@@ -49,7 +51,7 @@
   </header>
 
 
-  <main class="form container-content--respons">
+  <main class="form container-content container-content--respons">
     <h1 class="form__title">Подбор программы</h1>
     <p class="form__text">Заполните анкету, и мы подберем
       программу питания для вашего кота</p>
@@ -121,7 +123,8 @@
                 id="form-email" name="form-email" placeholder="kuklachev@gmail.com" required />
               <svg class="form-email-phone__field-icon form-email-phone__field-icon--email" width="19" height="14"
                 aria-label="Иконка графы электронная почта">
-                <use xlink:href="img/sprite.svg#email-icon"></use>
+                <path stroke="#222" stroke-width="1.3"
+                  d="M.65 5.85v8M17.65 5.85v8M0 13.2h18M0 1.2h18M17.35 3.03 9 9.53.65 3.02V1.5h16.7v1.53Z" />
               </svg>
             </div>
           </div>
@@ -131,8 +134,11 @@
               <input class="form-email-phone__field-text form-email-phone__field-text--phone" type="tel" id="form-phone"
                 name="form-phone" placeholder="8 (960) 900-60-90" required />
               <svg class="form-email-phone__field-icon form-email-phone__field-icon--phone" width="20" height="21"
-                aria-label="Иконка графы телефон">
-                <use xlink:href="img/sprite.svg#phone-icon"></use>
+                aria-label="Иконка графы телефон" viewBox="0 0 20 21" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M17.9 9.75275H9.39999V10.9569H17.9L15.8 13.0641L16.7 13.9672L19.8 10.8565C19.8974 10.7263 19.95 10.5678 19.95 10.405C19.95 10.2421 19.8974 10.0837 19.8 9.95344L16.7 6.84277L15.8 7.74587L17.9 9.75275Z" />
+                <path
+                  d="M8.10001 19.7872V13.5659C8.08846 13.41 8.02154 13.2635 7.91142 13.153C7.80131 13.0425 7.65532 12.9754 7.50001 12.9638H3.10001C3.10516 13.2815 3.23325 13.5848 3.45718 13.8095C3.68112 14.0342 3.98336 14.1627 4.30001 14.1679H6.80001V19.1851H3.10001C2.86326 19.2 2.62591 19.1676 2.40176 19.0896C2.17762 19.0117 1.97115 18.8898 1.79436 18.7311C1.61757 18.5723 1.47399 18.3799 1.37196 18.165C1.26992 17.9501 1.21148 17.717 1.20001 17.4793V3.43111C1.19181 2.96681 1.36516 2.51774 1.68292 2.18013C2.00069 1.84252 2.43758 1.64322 2.90001 1.62492H6.80001V6.64212H4.40001C4.08336 6.64729 3.78112 6.77581 3.55718 7.00052C3.33325 7.22523 3.20516 7.52851 3.20001 7.84625H7.60001C7.75531 7.83466 7.90131 7.76751 8.01142 7.65701C8.12154 7.54651 8.18846 7.40002 8.20001 7.24418V0.922517C8.15232 0.76584 8.06117 0.626022 7.93721 0.519407C7.81325 0.412792 7.66161 0.343785 7.50001 0.320453H3.10001C2.70599 0.307054 2.31321 0.371716 1.94411 0.510744C1.57501 0.649771 1.23684 0.860436 0.948933 1.13069C0.661026 1.40095 0.42903 1.7255 0.266207 2.08579C0.103385 2.44608 0.01293 2.83504 1.46306e-05 3.23043V17.1782C-0.0289644 17.5773 0.0246504 17.978 0.157487 18.3552C0.290324 18.7324 0.499509 19.078 0.771886 19.3701C1.04426 19.6623 1.37394 19.8947 1.74019 20.0529C2.10643 20.211 2.50132 20.2913 2.90001 20.2889H7.50001C7.5735 20.304 7.64943 20.3022 7.72216 20.2839C7.7949 20.2655 7.86259 20.2309 7.92021 20.1828C7.97783 20.1346 8.02391 20.074 8.05504 20.0055C8.08616 19.9371 8.10153 19.8624 8.10001 19.7872Z" />
               </svg>
             </div>
           </div>
@@ -197,7 +203,7 @@
 
   <footer class="main-footer">
     <div class="main-footer__inner-pages">
-      <section class="collaboration container-content--respons">
+      <section class="collaboration container-content container-content--respons">
         <h2 class="collaboration__title">Приглашаем <br>
           к сотрудничеству
           дилеров!
