--- a/source/index.html
+++ b/source/index.html
@@ -11,11 +11,13 @@
   <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicon/apple.png">
   <link rel="manifest" href="manifest.webmanifest">
+  <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
+  <link rel="preload" href="fonts/oswaldmedium.woff2" as="font">
 </head>
 
 <body class="page-body">
   <header class="main-header">
-    <div class="main-header__wrapper container-content--header">
+    <div class="main-header__wrapper container-content container-content--header">
       <div class="main-logo">
         <a class="main-logo__icon" href="#">
           <picture>
@@ -75,7 +77,7 @@
 
     </section>
 
-    <section class="our-programs container-content--respons">
+    <section class="our-programs container-content container-content--respons">
       <h2 class="visually-hidden">Программы для изменения веса</h2>
       <div class="our-programs__wrapper slim-program">
         <h3 class="our-programs__title">Похудение</h3>
@@ -91,7 +93,7 @@
       </div>
     </section>
 
-    <section class="features container-content--respons">
+    <section class="features container-content  container-content--respons">
       <h2 class="features__title">Как это работает</h2>
       <ul class="features__list reset-list">
         <li class="features__item reset-item">
@@ -117,7 +119,7 @@
     </section>
 
     <div class="container container--example">
-      <section class="example container-content--respons">
+      <section class="example container-content container-content--respons">
         <h2 class="example__title">Живой пример</h2>
         <div class="example__content-wrapper">
           <div class="example__stats-wrapper">
@@ -183,7 +185,7 @@
   </main>
 
   <footer class="main-footer ">
-    <section class="collaboration container-content--respons">
+    <section class="collaboration container-content container-content--respons">
       <h2 class="collaboration__title">Приглашаем <br>
         к сотрудничеству
         дилеров!
